--- a/views/navbar.ejs
+++ b/views/navbar.ejs
@@ -1,50 +1,51 @@
-    <nav class="navbar navbar-expand-lg" style="background-color: #94618E;">
-        <div class="container-fluid">
-            <a class="navbar-brand" href="/" style="font-family: 'Bungee Shade', sans-serif; font-weight: 800; color: white;">Chapters</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse justify-content-between" id="navbarNav">
-                <ul class="navbar-nav">
-                    <li class="nav-item">
-                        <a class="nav-link nav-font" aria-current="page" href="/">Home</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link nav-font" href="/books">Books</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link nav-font" href="/cart">Cart</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link nav-font" href="/orders">Orders</a>
-                    </li>
-                </ul>
-                <!-- Search bar will be hidden on smaller screens -->
-                <form class="d-none d-lg-flex" action="/search" method="post">
-                    <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-                    <button class="btn btn-outline-light" type="submit">Search</button>
-                </form>
-                <ul class="navbar-nav">
-                    <% if (username) { %>
-                        <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle nav-font" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                                <%= username %>
-                            </a>
-                            <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                <li><a class="dropdown-item" href="/profile">Profile</a></li>
-                                <li><hr class="dropdown-divider"></li>
-                                <li><a class="dropdown-item" href="/logout">Logout</a></li>
-                            </ul>
-                        </li>
-                    <% } else { %>
-                        <li class="nav-item">
-                            <a class="nav-link nav-font" href="/login">Login</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link nav-font" href="/register">Register</a>
-                        </li>
-                    <% } %>
-                </ul>
-            </div>
+<nav class="navbar navbar-expand-lg" style="background-color: #94618E;">
+  <div class="container-fluid ">
+      <a class="navbar-brand" href="/" style="font-family: 'Bungee Shade', sans-serif; font-weight: 800; color: white;">Chapters</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse justify-content-between" id="navbarNav">
+          <ul class="navbar-nav">
+              <li class="nav-item">
+                  <a class="nav-link nav-font" aria-current="page" href="/">Home</a>
+              </li>
+              <li class="nav-item">
+                  <a class="nav-link nav-font" href="/books">Books</a>
+              </li>
+              <li class="nav-item">
+                  <a class="nav-link nav-font" href="/cart">Cart</a>
+              </li>
+              <li class="nav-item">
+                  <a class="nav-link nav-font" href="/orders">Orders</a>
+              </li>
+          </ul>
+          <div class="d-flex flex-row">
+          <form class="d-none d-lg-flex" action="/search" method="post" style="width: 400px;">
+              <input class="form-control me-2" type="search" placeholder="Search by title, author, or ISBN" aria-label="Search">
+              <button class="btn btn-outline-light" type="submit">Search</button>
+          </form>
+          <ul class="navbar-nav">
+              <% if (username) { %>
+                  <li class="nav-item dropdown">
+                      <a class="nav-link dropdown-toggle nav-font" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                          <%= username %>
+                      </a>
+                      <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                          <li><a class="dropdown-item" href="/profile">Profile</a></li>
+                          <li><hr class="dropdown-divider"></li>
+                          <li><a class="dropdown-item" href="/logout">Logout</a></li>
+                      </ul>
+                  </li>
+              <% } else { %>
+                  <li class="nav-item">
+                      <a class="nav-link nav-font" href="/login">Login</a>
+                  </li>
+                  <li class="nav-item">
+                      <a class="nav-link nav-font" href="/register">Register</a>
+                  </li>
+              <% } %>
+          </ul>
         </div>
-    </nav>
+      </div>
+  </div>
+</nav>
