--- a/views/header.ejs
+++ b/views/header.ejs
@@ -18,6 +18,7 @@
 <style>
   body{
     font-family: "Lato", sans-serif;
+    background-color: #F8EEE7;
   }
   .nav-font {
     font-family: "Lato", sans-serif;
@@ -25,8 +26,14 @@
     font-style: bold;
     color: white;
   }
+  .navbar-nav .nav-item .dropdown-menu {
+    display: none;
+  }
+  .navbar-nav .nav-item:hover .dropdown-menu {
+    display: block;
+  }
 </style>
-  <body>
+<body>
 
 
 
