--- a/views/footer.ejs
+++ b/views/footer.ejs
@@ -1,11 +1,19 @@
-    <footer class="container-fluid text-center mt-4 p-2 bg-dark text-white">
-        <p>&copy; 2024 Ice Cream made chilled!</p>
-    </footer>
-
-    <!-- Optional JavaScript -->
-    <!-- Bootstrap Bundle with Popper -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-        crossorigin="anonymous"></script>
-</body>
-</html>
+<footer>
+    <div class="container-fluid p-2 text-white" style="background-color: #94618E;">
+      <div class="row">
+        <div class="col-12 col-sm-8 mx-auto text-center ">
+          <!-- adding link -->
+          <p >&copy; 2024 A webpage footer with important info.</p>
+          <i class="bi bi-facebook mx-1" style="font-size: 20px;"></i>
+          <i class="bi bi-instagram  mx-1" style="font-size: 20px;"></i>
+          <i class="bi bi-twitter  mx-1" style="font-size: 20px;"></i>
+          <a class="text-decoration-none text-white" href="mailto:nattakan.o1998@gmail.com"><i class="bi bi-envelope-fill mx-1" style="font-size: 20px;"></i>nattakan.o1998@gmail.com</a>
+        </div>
+      </div>
+    </div>
+  </footer>
+  <script src="navbar.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js" integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy" crossorigin="anonymous"></script>
+  </body>
+  </html>
