you may also like

--- a/views/navbar.ejs
+++ b/views/navbar.ejs
@@ -19,7 +19,7 @@
                   <a class="nav-link nav-font" href="/orders">Orders</a>
               </li>
           </ul>
-        
+        <div class="d-flex flex-row">
           <form class="d-none d-lg-flex" action="/search" method="post" style="width: 400px;">
               <input class="form-control me-2" type="search" placeholder="Search by title, author, or ISBN" aria-label="Search">
               <button class="btn btn-outline-light" type="submit">Search</button>
@@ -45,6 +45,8 @@
                   </li>
               <% } %>
           </ul>
+    
+    </div>
     
       </div>
   </div>
