--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -1,10 +1,10 @@
 <%- include('header'); -%>
 <%- include('navbar.ejs', username) %>
-    <div class="container mt-5">
+    <div class="container my-5">
         <div class="row justify-content-center">
             <div class="col-md-6">
                 <div class="card">
-                    <div class="card-header">Profile</div>
+                    <div class="card-header" style="background-color: #94618E; color: #F8EEE7;">Profile</div>
                     <div class="card-body">
                         <div class="mb-3">
                             <label for="username" class="form-label">Username</label>
@@ -36,8 +36,4 @@
             </div>
         </div>
     </div>
-
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.7/dist/umd/popper.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.min.js"></script>
-</body>
-</html>
+<%- include('footer'); -%>
