--- a/views/bookDetail.ejs
+++ b/views/bookDetail.ejs
@@ -1,7 +1,38 @@
 <%- include('header'); -%>
 <%- include('navbar.ejs', username) %>
-<div class="col-md-10 mx-auto">
+<style>
+  .card {
+    position: relative;
+    height: 100%;
+  }
   
+  .overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background: rgba(0, 0, 0, 0.7);
+    color: white;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    opacity: 0;
+    transition: opacity 0.7s ease;
+  }
+  .card:hover {
+    transform: scale(1.05);
+  }
+  .card:hover .overlay {
+    opacity: 1;
+  }
+  .book-image {
+    height: 250px; 
+    width: 100%; 
+    object-fit: cover; 
+  }
+</style>
+<div class="col-md-10 mx-auto">
   <div class="row bg-white p-4 my-4 rounded">
     <div class="col-md-5 text-center">
       <h2 class="text-start"><%= book.title %></h2>
@@ -27,43 +58,46 @@
     </div>
   </div>
 
-
-
-<!-- You May Also Like carousel -->
-<div id="you-may-also-like" class="carousel slide" data-bs-ride="carousel">
-  <div class="carousel-inner">
-    <% for (let i = 0; i < Math.ceil(books.length / 5); i++) { %>
-        <div class="carousel-item <%= i === 0 ? 'active' : '' %>">
-            <div class="row">
-                <% for (let j = i * 5; j < Math.min((i + 1) * 5, books.length); j++) { %>
-                    <div class="col-md-2">
-                        <div class="card">
-                            <img src="../<%= books[j].cover_image_url %>" class="card-img-top" alt="<%= books[j].title %>">
-                            <div class="card-body">
-                                <h5 class="card-title"><%= books[j].title %></h5>
-                                <p class="card-text"><%= books[j].author %></p>
-                            </div>
-                        </div>
+  <h3>You May Also Like</h3>
+  <div class="my-3 rounded bg-white">
+    <div id="you-may-also-like" class="carousel slide" data-bs-ride="carousel">
+      <div class="carousel-inner p-3">
+        <% for (let i = 0; i < Math.ceil(books.length / 5); i++) { %>
+          <div class="carousel-item <%= i === 0 ? 'active' : '' %>">
+            <div class="row justify-content-center">
+              <% for (let j = i * 5; j < Math.min((i + 1) * 5, books.length); j++) { %>
+                <div class="col-md-2">
+                  <div class="card position-relative">
+                    <img src="../<%= books[j].cover_image_url %>" class="card-img-top book-image" alt="<%= books[j].title %>">
+                    <div class="card-body">
+                      <h5 class="card-title"><%= books[j].title %></h5>
+                      <p class="card-text"><%= books[j].author %></p>
                     </div>
-                <% } %>
+                    <div class="overlay">
+                      <a href="/bookdetail/<%= books[j].book_id %>" class="text-decoration-none text-white">
+                        View Details
+                      </a>
+                    </div>
+                  </div>
+                </div>
+              <% } %>
             </div>
-        </div>
-    <% } %>
+          </div>
+        <% } %>
+      </div>
+      <button class="carousel-control-prev" type="button" data-bs-target="#you-may-also-like" data-bs-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Previous</span>
+      </button>
+      <button class="carousel-control-next" type="button" data-bs-target="#you-may-also-like" data-bs-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Next</span>
+      </button>
+    </div>
+  </div>
+  
+ 
+  
 </div>
-<button class="carousel-control-prev" type="button" data-bs-target="#you-may-also-like" data-bs-slide="prev">
-    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-    <span class="visually-hidden">Previous</span>
-</button>
-<button class="carousel-control-next" type="button" data-bs-target="#you-may-also-like" data-bs-slide="next">
-    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-    <span class="visually-hidden">Next</span>
-</button>
-</div>
-</div>
-<!-- List of reviews -->
 
-</div>
-<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.7/dist/umd/popper.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.min.js"></script>
-</body>
-</html>
+<%- include('footer'); -%>
