--- a/views/books.ejs
+++ b/views/books.ejs
@@ -53,10 +53,10 @@
     display: none !important;
   }
   .badge-primary {
-    background-color: #94618E;;
+    background-color: #783ca2;;
     color: #fff;
     padding: 0.5em 1em;
-    font-size: 1em;
+    font-size: 1.25em;
     border-radius: 0.5em;
   }
   @media (max-width: 767px) {
@@ -99,113 +99,109 @@
 <nav class="navbar navbar-expand-lg" style="background-color: #f4dec8;">
   <div class="container-fluid">
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#bookNav" aria-controls="bookNav" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
+        <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse justify-content-center" id="bookNav">
         <ul class="navbar-nav">
-            <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle no-caret" href="#" id="fictionDropdown" role="button" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                    Fiction
-                </a>
-                <div class="dropdown-menu" aria-labelledby="fictionDropdown">
-                    <a class="dropdown-item" href="#">Romance</a>
-                    <a class="dropdown-item" href="#">Mystery</a>
-                    <a class="dropdown-item" href="#">Thriller</a>
-                    <a class="dropdown-item" href="#">Sci-Fi</a>
-                </div>
-            </li>
-            <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle no-caret" href="#" id="nonFictionDropdown" role="button" data-bs-toggle="dropdown" aria-haspopup="false" aria-expanded="false">
-                    Non-Fiction
-                </a>
-                <div class="dropdown-menu" aria-labelledby="nonFictionDropdown">
-                    <a class="dropdown-item" href="#">Biography</a>
-                    <a class="dropdown-item" href="#">History</a>
-                    <a class="dropdown-item" href="#">Self-Help</a>
-                    <a class="dropdown-item" href="#">Science</a>
-                </div>
-            </li>
-            <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle no-caret" href="#" id="kidsDropdown" role="button" data-bs-toggle="dropdown" aria-haspopup="false" aria-expanded="false">
-                    Kids
-                </a>
-                <div class="dropdown-menu" aria-labelledby="kidsDropdown">
-                    <a class="dropdown-item" href="#">Picture Books</a>
-                    <a class="dropdown-item" href="#">Early Readers</a>
-                    <a class="dropdown-item" href="#">Middle Grade</a>
-                </div>
-            </li>
-            <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle no-caret" href="#" id="textbookDropdown" role="button" data-bs-toggle="dropdown" aria-haspopup="false" aria-expanded="false">
-                    Textbook
-                </a>
-                <div class="dropdown-menu" aria-labelledby="textbookDropdown">
-                    <a class="dropdown-item" href="#">Math</a>
-                    <a class="dropdown-item" href="#">Science</a>
-                    <a class="dropdown-item" href="#">History</a>
-                    <a class="dropdown-item" href="#">Language Arts</a>
-                </div>
-            </li>
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle no-caret" href="#" id="fictionDropdown" role="button" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                Fiction
+            </a>
+            <div class="dropdown-menu" aria-labelledby="fictionDropdown">
+              <a class="dropdown-item" href="#">Romance</a>
+              <a class="dropdown-item" href="#">Mystery</a>
+              <a class="dropdown-item" href="#">Thriller</a>
+              <a class="dropdown-item" href="#">Sci-Fi</a>
+            </div>
+          </li>
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle no-caret" href="#" id="nonFictionDropdown" role="button" data-bs-toggle="dropdown" aria-haspopup="false" aria-expanded="false">
+              Non-Fiction
+            </a>
+            <div class="dropdown-menu" aria-labelledby="nonFictionDropdown">
+              <a class="dropdown-item" href="#">Biography</a>
+              <a class="dropdown-item" href="#">History</a>
+              <a class="dropdown-item" href="#">Self-Help</a>
+              <a class="dropdown-item" href="#">Science</a>
+            </div>
+          </li>
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle no-caret" href="#" id="kidsDropdown" role="button" data-bs-toggle="dropdown" aria-haspopup="false" aria-expanded="false">
+                Kids
+            </a>
+            <div class="dropdown-menu" aria-labelledby="kidsDropdown">
+              <a class="dropdown-item" href="#">Picture Books</a>
+              <a class="dropdown-item" href="#">Early Readers</a>
+              <a class="dropdown-item" href="#">Middle Grade</a>
+            </div>
+          </li>
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle no-caret" href="#" id="textbookDropdown" role="button" data-bs-toggle="dropdown" aria-haspopup="false" aria-expanded="false">
+                Textbook
+            </a>
+            <div class="dropdown-menu" aria-labelledby="textbookDropdown">
+              <a class="dropdown-item" href="#">Math</a>
+              <a class="dropdown-item" href="#">Science</a>
+              <a class="dropdown-item" href="#">History</a>
+              <a class="dropdown-item" href="#">Language Arts</a>
+            </div>
+          </li>
         </ul>
     </div>
-    
-  </div>
-</nav>
-
-<section class="container my-5">
-  <h1 class="text-center mb-2">Bestsellers</h1>
-  <div class="row justify-content-center">
-    <div class="row row-cols-1 row-cols-md-5 g-4">
-      <% bestseller.forEach(function(book, index) { %>
-        <div class="col">
-          <a href="/bookdetail/<%= book.book_id %>" class="text-decoration-none">
-            <div class="card h-100 position-relative">
-              <img src="<%= book.cover_image_url %>" class="card-img-top book-image" alt="<%= book.title %>">
-              <div class="badge badge-primary position-absolute top-0 start-0 m-2">
-                #<%= index + 1 %>
-              </div>
-              <div class="card-title-overlay">
-                <h5 class="card-title"><%= book.title %></h5>
-              </div>
-              <div class="card-body hidden-card-body">
-                <a href="/bookdetail/<%= book.book_id %>" class="btn btn-primary">View Details</a>
-              </div>
-            </div>
-          </a>
-        </div>
-      <% }); %>
     </div>
-  </div>
-</section>
+  </nav>
 
-<section class="container mb-2">
-  <h2 class="text-center mb-4">All Books</h2>
-  <div class="row justify-content-center">
-    <div class="container my-5">
-      <div class="row row-cols-1 row-cols-md-4 g-4">
-          <% books.forEach(function(book) { %>
-              <div class="col">
-                  <a href="/bookdetail/<%= book.book_id %>" class="text-decoration-none">
-                  <div class="card h-100">
-                      <img src="<%= book.cover_image_url %>" class="card-img-top book-image" alt="<%= book.title %>">
-                      <div class="card-title-overlay">
-                          <h5 class="card-title"><%= book.title %></h5>
-                      </div>
-                      <div class="card-body hidden-card-body">
-                        <!-- <h5 class="card-title title-hidden"><%= book.title %></h5> -->
-                        <a href="/bookdetail/<%= book.book_id %>" class="btn btn-primary">View Details</a>
-                      </div>
-                  </div>
+  <section class="container my-5">
+    <h1 class="text-center mb-2">Bestsellers</h1>
+    <div class="row justify-content-center">
+      <div class="row row-cols-1 row-cols-md-5 g-4">
+        <% bestseller.forEach(function(book, index) { %>
+          <div class="col">
+            <a href="/bookdetail/<%= book.book_id %>" class="text-decoration-none">
+              <div class="card h-100 position-relative">
+                <img src="<%= book.cover_image_url %>" class="card-img-top book-image" alt="<%= book.title %>">
+                <div class="badge badge-primary position-absolute top-0 start-0 m-2">
+                  #<%= index + 1 %>
+                </div>
+                <div class="card-title-overlay">
+                  <h5 class="card-title"><%= book.title %></h5>
+                </div>
+                <div class="card-body hidden-card-body">
+                  <a href="/bookdetail/<%= book.book_id %>" class="btn btn-primary">View Details</a>
+                </div>
               </div>
-          <% }); %>
+            </a>
+          </div>
+        <% }); %>
       </div>
-  </div>
+    </div>
+  </section>
+
+  <section class="container mb-2">
+    <h2 class="text-center mb-4">All Books</h2>
+    <div class="row justify-content-center">
+      <div class="container my-5">
+        <div class="row row-cols-1 row-cols-md-4 g-4">
+            <% books.forEach(function(book) { %>
+                <div class="col">
+                    <a href="/bookdetail/<%= book.book_id %>" class="text-decoration-none">
+                    <div class="card h-100">
+                        <img src="<%= book.cover_image_url %>" class="card-img-top book-image" alt="<%= book.title %>">
+                        <div class="card-title-overlay">
+                            <h5 class="card-title"><%= book.title %></h5>
+                        </div>
+                        <div class="card-body hidden-card-body">
+                          <!-- <h5 class="card-title title-hidden"><%= book.title %></h5> -->
+                          <a href="/bookdetail/<%= book.book_id %>" class="btn btn-primary">View Details</a>
+                        </div>
+                    </div>
+                </div>
+            <% }); %>
+        </div>
+      </div>
+    </div>
+  </section> 
 </div>
-</section> 
-</div>
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.7/dist/umd/popper.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.min.js"></script>
-</body>
-</html>
+<%- include('footer'); -%>
 
 
