--- a/views/bookDetail.ejs
+++ b/views/bookDetail.ejs
@@ -52,8 +52,12 @@
         
         <form action="/add-to-cart" method="post">
           <input type="hidden" name="book_id" value="<%= book.book_id %>">
+          <div class="mb-3 d-flex flex-row align-items-center">
+              <label for="quantity" class="form-label me-3">Quantity</label>
+              <input type="number" class="form-control" id="quantity" name="quantity" value="1" min="1" max="<%= book.stock_quantity %>" required>
+          </div>
           <button class="btn btn-danger" type="submit">Add to Cart</button>
-        </form>
+      </form>
       </div>
     </div>
   </div>
