--- a/views/books.ejs
+++ b/views/books.ejs
@@ -12,15 +12,12 @@
     cursor: pointer;
     transition: transform 0.2s;
   }
-
   .card:hover {
     transform: scale(1.05);
   }
-
   .card-img-top {
     transition: transform 0.2s;
   }
-
   .card:hover .card-img-top {
     transform: scale(1.1);
   }
@@ -150,7 +147,7 @@
     </div>
     </div>
   </nav>
-
+  <% if(bestseller){ %>
   <section class="container my-5">
     <h1 class="text-center mb-2">Bestsellers</h1>
     <div class="row justify-content-center">
@@ -176,9 +173,13 @@
       </div>
     </div>
   </section>
-
+  <% } %>
   <section class="container mb-2">
+    <% if(search == ""){ %>
     <h2 class="text-center mb-4">All Books</h2>
+    <% }else { %>
+      <h2 class="mt-3" style="font-weight: 900;">Searching <strong style="color: rgb(213, 56, 56);"> '<%= search %>'</strong></h2>
+      <% } %>
     <div class="row justify-content-center">
       <div class="container my-5">
         <div class="row row-cols-1 row-cols-md-4 g-4">
