--- a/views/navbar.ejs
+++ b/views/navbar.ejs
@@ -21,7 +21,7 @@
           </ul>
         <div class="d-flex flex-row">
           <form class="d-none d-lg-flex" action="/search" method="post" style="width: 400px;">
-              <input class="form-control me-2" type="search" placeholder="Search by title, author, or ISBN" aria-label="Search">
+              <input class="form-control me-2" type="search" name="search" placeholder="Search by title, author, or ISBN" aria-label="Search" required>
               <button class="btn btn-outline-light" type="submit">Search</button>
           </form>
           <ul class="navbar-nav">
@@ -47,7 +47,7 @@
           </ul>
     
     </div>
-    
+
       </div>
   </div>
 </nav>
