--- a/views/cart.ejs
+++ b/views/cart.ejs
@@ -8,7 +8,9 @@
 </style>
   <div class="container my-5 col-md-10">
         <h1 class="mb-4">Shopping Cart</h1>
+        
         <% if (cartItems.length > 0) { %>
+          <p><%= cartItems[0].cart_id %></p>
             <div class="table-responsive">
                 <table class="table table-bordered">
                     <thead>
@@ -43,6 +45,7 @@
                               </td>
                                 <td>$<%= item.price.toFixed(2) %></td>
                                 <td>$<%= (item.quantity * item.price).toFixed(2) %></td>
+                                
                                 <td>
                                     <form action="/cart/remove/<%= item.cart_item_id %>" method="post" class="d-inline">
                                         <button type="submit" class="btn btn-danger btn-sm">Remove</button>
@@ -57,7 +60,7 @@
                 <span class="total-price">Total: $<%= totalPrice.toFixed(2) %></span>
             </div>
             <div class="d-flex justify-content-end mt-3">
-              <form action="/checkout" method="post">
+              <form action="/checkout/<%= cartItems[0].cart_id %>" method="post">
                 <button class="btn btn-success" type="submit">Proceed to Checkout</button>
             </form>            
             </div>
