--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,17 +1,19 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-</head>
-<body>
-    <div class="container mt-5">
+<%- include('header'); -%>
+<style>
+  body {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+    margin: 0;
+  }
+</style>
+    <div class="container">
         <div class="row justify-content-center">
             <div class="col-md-6">
-                <div class="card">
-                    <div class="card-header">Login</div>
+                <div class="card shadow"> <!-- Added shadow class here -->
+                    <div class="card-header" style="background-color: #94618E; color: white;">
+                      <h3>Login</h3></div>
                     <div class="card-body">
                         <% if (errorMessage) { %>
                             <div class="alert alert-danger" role="alert">
@@ -27,16 +29,21 @@
                                 <label for="password" class="form-label">Password</label>
                                 <input type="password" class="form-control" id="password" name="password" required>
                             </div>
-                            <button type="submit" class="btn btn-primary">Login</button>
-                            <a href="/register"><button class="btn btn-primary">Register</button></a>
+                            <div class="d-grid gap-2 my-2">
+                              <button type="submit" class="btn" style="background-color: #94618E; color: white;">Login</button>
+                            </div>
+                            
                         </form>
+                        <div class="d-grid gap-2 my-2">
+                            <a href="/register" class="btn" style="background-color: #505db5; color: white;"">Register</a>
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
     </div>
-
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.7/dist/umd/popper.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 </body>
 </html>
