--- a/views/login.ejs
+++ b/views/login.ejs
@@ -7,11 +7,12 @@
     height: 100vh;
     margin: 0;
   }
+
 </style>
     <div class="container">
         <div class="row justify-content-center">
             <div class="col-md-6">
-                <div class="card shadow"> <!-- Added shadow class here -->
+                <div class="card shadow"> 
                     <div class="card-header" style="background-color: #94618E; color: white;">
                       <h3>Login</h3></div>
                     <div class="card-body">
@@ -45,5 +46,6 @@
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+ 
 </body>
 </html>
