--- a/views/booknav.ejs
+++ b/views/booknav.ejs
@@ -73,13 +73,13 @@
   <div id="bookBanner" class="carousel slide" data-bs-ride="carousel">
     <div class="carousel-inner">
       <div class="carousel-item active">
-        <img src="images/carousel_image_1.jpg" class="d-block w-100" alt="Carousel Image 1">
+        <img src="../../../images/carousel_image_1.jpg" class="d-block w-100" alt="Carousel Image 1">
       </div>
       <div class="carousel-item">
-        <img src="images/carousel_image_2.jpg" class="d-block w-100" alt="Carousel Image 2">
+        <img src="../../../images/carousel_image_2.jpg" class="d-block w-100" alt="Carousel Image 2">
       </div>
       <div class="carousel-item">
-        <img src="images/carousel_image_3.jpg" class="d-block w-100" alt="Carousel Image 3">
+        <img src="../../../images/carousel_image_3.jpg" class="d-block w-100" alt="Carousel Image 3">
       </div>
     </div>
     <button class="carousel-control-prev" type="button" data-bs-target="#bookBanner" data-bs-slide="prev">
@@ -150,36 +150,9 @@
     </div>
     </div>
   </nav>
-  <% if(bestseller){ %>
-  <section class="container my-5">
-    <h1 class="text-center mb-2">Bestsellers</h1>
-    <div class="row justify-content-center">
-      <div class="row row-cols-1 row-cols-md-5 g-4">
-        <% bestseller.forEach(function(book, index) { %>
-          <div class="col">
-            <a href="/bookdetail/<%= book.book_id %>" class="text-decoration-none">
-              <div class="card h-100 position-relative">
-                <img src="<%= book.cover_image_url %>" class="card-img-top book-image" alt="<%= book.title %>">
-                <div class="badge badge-primary position-absolute top-0 start-0 m-2">
-                  #<%= index + 1 %>
-                </div>
-                <div class="card-title-overlay">
-                  <h5 class="card-title"><%= book.title %></h5>
-                </div>
-                <div class="card-body hidden-card-body">
-                  <a href="/bookdetail/<%= book.book_id %>" class="btn btn-primary">View Details</a>
-                </div>
-              </div>
-            </a>
-          </div>
-        <% }); %>
-      </div>
-    </div>
-  </section>
-  <% } %>
   <section class="container mb-2">
     <% if(search == ""){ %>
-    <h2 class="text-center mb-4">All Books</h2>
+    <h2 class=" my-4"><%= genre %> > <%= subgenre %></h2>
     <% }else { %>
       <h2 class="mt-3" style="font-weight: 900;">Searching <strong style="color: rgb(213, 56, 56);"> '<%= search %>'</strong></h2>
       <% } %>
@@ -190,7 +163,7 @@
                 <div class="col">
                     <a href="/bookdetail/<%= book.book_id %>" class="text-decoration-none">
                     <div class="card h-100">
-                        <img src="<%= book.cover_image_url %>" class="card-img-top book-image" alt="<%= book.title %>">
+                        <img src="../../../<%= book.cover_image_url %>" class="card-img-top book-image" alt="<%= book.title %>">
                         <div class="card-title-overlay">
                             <h5 class="card-title"><%= book.title %></h5>
                         </div>
