--- a/views/order.ejs
+++ b/views/order.ejs
@@ -11,7 +11,7 @@
                         case 'Pending':
                             statusColor = 'text-warning';
                             break;
-                        case 'Shipped':
+                        case 'Shipping':
                             statusColor = 'text-primary';
                             break;
                         case 'Delivered':
